--- a/packages/custom/sprinter/public/assets/css/login.less
+++ b/packages/custom/sprinter/public/assets/css/login.less
@@ -1,6 +1,6 @@
 /*------------------------------ SPRINTER LOGIN -------------------------------*/
 body.login, body.register, body.forgot-password {
-  .main-form2 {
+  .main-form {
     .box;
   }
 }
