--- a/packages/custom/sprinter/public/assets/css/sprinter-app.less
+++ b/packages/custom/sprinter/public/assets/css/sprinter-app.less
@@ -53,6 +53,8 @@
 
 @import 'icons-variables.less';
 @import 'icons.less';
+@import 'scrollbar.less';
+@import 'grid.less';
 @import 'mixins.less';
 @import 'common.less';
 @import 'layout.less';
