--- a/packages/custom/sprinter/public/assets/css/variables.less
+++ b/packages/custom/sprinter/public/assets/css/variables.less
@@ -92,3 +92,13 @@
 @header-height: @navbar-height;
 @menu-width: 250px;
 
+
+/* Scrollbar
+------------------------------------------------------------------------------*/
+@scrollbar-width: 5px;
+@scrollbar-track-bg: @black-transparent-1;
+@scrollbar-thumb-bg: @black-transparent-2;
+@scrollbar-button-bg: @gray-light;
+@scrollbar-corner-bg: @gray-light;
+
+
