--- a/packages/custom/sprinter/public/assets/css/menu.less
+++ b/packages/custom/sprinter/public/assets/css/menu.less
@@ -1,21 +1,7 @@
 /*------------------------------ SPRINTER MENU -------------------------------*/
 aside {
   background-color: @menu-bg-color;
-
-  h1 {
-    background-color: @logo-bg-color;
-    margin: 0;
-    line-height: @header-height;
-    font-size: @font-size-large;
-    font-weight: @font-weight-bold;
-    text-transform: uppercase;
-    text-align: center;
-    border-bottom: 1px solid @logo-bg-color;
-
-    a {
-      color: white;
-    }
-  }
+  padding-top: @header-height;
 
   .collapse {
     padding: 0;
