--- a/packages/custom/sprinter/public/assets/css/layout.less
+++ b/packages/custom/sprinter/public/assets/css/layout.less
@@ -33,4 +33,11 @@ main {
   padding-left: @menu-width;
   width: 100%;
   height: 100%;
+
+  > section {
+    .clearfix();
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
 }
