--- a/packages/custom/sprinter/public/assets/css/variables.less
+++ b/packages/custom/sprinter/public/assets/css/variables.less
@@ -12,6 +12,8 @@
 
 @font-size-extra-small: @font-size-small - 2px;
 
+
+
 /* Border
 ------------------------------------------------------------------------------*/
 @border-radius-base         : 2px;
@@ -25,7 +27,6 @@
 
 /* Colors
 ------------------------------------------------------------------------------*/
-
 //transparent colors
 @black-transparent-1        : rgba(0,0,0,0.1);
 @black-transparent-2        : rgba(0,0,0,0.2);
@@ -101,4 +102,8 @@
 @scrollbar-button-bg: @gray-light;
 @scrollbar-corner-bg: @gray-light;
 
+
+/* Box
+------------------------------------------------------------------------------*/
+@box-separator-size: 40px;
 
