--- a/packages/custom/sprinter/public/views/users/login.html
+++ b/packages/custom/sprinter/public/views/users/login.html
@@ -1,38 +1,33 @@
 <section class="main-form" data-ng-controller="LoginCtrl as login">
-  <header>
-    <span ng-if="$state.is('auth.login')">Login</span>
-  </header>
+  <form ng-submit="login.login()">
+    <header>
+      <h3 ng-if="$state.is('auth.login')">Login</h3>
+    </header>
 
-  <section>
-    <a ng-repeat="(key, val) in socialButtons" target="_self" ng-href="/api/auth/{{key}}" class="btn btn-sm btn-black social-button-{{key}}">
-      <span>Log In With {{key}}</span>
-    </a>
-  </section>
+    <section>
+      <a ng-repeat="(key, val) in socialButtons" target="_self" ng-href="/api/auth/{{key}}" class="btn btn-sm btn-black social-button-{{key}}">
+        <span>Log In With {{key}}</span>
+      </a>
+    </section>
 
-  <section>
-    <div class="alert alert-danger animated fadeIn" ng-show="login.loginError">{{login.loginError}}</div>
-    <form id="login_form" ng-submit="login.login()">
-      <div class="input-wrapper">
-        <input required id="email_block" type="email" name="email" placeholder="Email Address" ng-model="login.user.email">
+    <div class="box-separator"><span>or</span></div>
+
+    <section>
+      <div class="alert alert-danger animated fadeIn" ng-show="login.loginError">{{login.loginError}}</div>
+      <div class="form-group">
+        <input required type="email" name="email" class="form-control" placeholder="Email Address" ng-model="login.user.email">
       </div>
-      <div class="input-wrapper">
-        <input required id="password_block" name="password" type="{{login.input.type}}" placeholder="{{login.input.placeholder}}" ng-model="login.user.password">
+      <div class="form-group">
+        <input required name="password" type="{{login.input.type}}" class="form-control" placeholder="{{login.input.placeholder}}" ng-model="login.user.password">
       </div>
       <div class="forgot_password">
         <a ui-sref="forgot-password">Forgot your password?</a>
       </div>
-      <div class="button_login">
-        <button type="submit" class="submit_button">Login</button>
-        <p>Don't have an account?</p>
-        <a ui-sref="auth.register">Sign up</a>
-      </div>
-    </form>
-  </section>
-  
-  <footer>
-    <button class="btn btn-sm btn-black">Login</button>
-  </footer>
+    </section>
+
+    <footer>
+      <a ui-sref="auth.register" class="btn btn-sm btn-default"><small>No account? Sign up</small></a>
+      <button type="submit" class="btn btn-sm btn-black">Login</button>
+    </footer>
+  </form>
 </section>
-
-
-
