--- a/packages/custom/sprinter/public/assets/css/sprinter-app.less
+++ b/packages/custom/sprinter/public/assets/css/sprinter-app.less
@@ -61,6 +61,7 @@
 
 //utils
 @import 'buttons.less';
+@import 'inputs.less';
 @import 'box.less';
 @import 'stateful-button.less';
 @import 'navbar.less';
