--- a/packages/custom/sprinter/public/views/project/index.html
+++ b/packages/custom/sprinter/public/views/project/index.html
@@ -8,6 +8,27 @@
           <button class="btn btn-lg btn-success" ng-click="create()">Add project</button>
         </div>
       </div>
+
+      <div class="form-group input-group">
+        <input type="text" ng-model="newProject.name" class="form-control input" placeholder="Project name">
+        <div class="input-group-btn">
+          <button class="btn btn-success" ng-click="create()">Add project</button>
+        </div>
+      </div>
+
+      <div class="form-group input-group">
+        <input type="text" ng-model="newProject.name" class="form-control input-sm" placeholder="Project name">
+        <div class="input-group-btn">
+          <button class="btn btn-sm btn-success" ng-click="create()">Add project</button>
+        </div>
+      </div>
+
+      <div class="form-group input-group">
+        <input type="text" ng-model="newProject.name" class="form-control input-sm" placeholder="Project name">
+        <div class="input-group-btn">
+          <button class="btn btn-xs btn-success" ng-click="create()">Add project</button>
+        </div>
+      </div>
     </form>
     <div>
       <div class="project" ng-repeat="project in projects">
